--- a/examples/plot_exp_sequence.ipynb
+++ b/examples/plot_exp_sequence.ipynb
@@ -16,7 +16,132 @@
    "id": "f1ee14aa",
    "metadata": {},
    "source": [
+    "## q2D contact spectroscopy sequence (with lattice loading)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9bc013c3",
+   "metadata": {},
+   "source": [
     "## q2D contact spectroscopy sequence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "c8c3fa8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import sys, os\n",
+    "\n",
+    "from pathlib import Path\n",
+    "sys.path.append(str(Path(os.getcwd()).parent))\n",
+    "\n",
+    "from general.exp_sequence import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "46e6c0da",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'xy' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 14\u001b[39m\n\u001b[32m     11\u001b[39m seq_func_mapping[\u001b[33m'\u001b[39m\u001b[33mblackman1\u001b[39m\u001b[33m'\u001b[39m] = blackman_seq_func(\u001b[32m10\u001b[39m)\n\u001b[32m     13\u001b[39m \u001b[38;5;66;03m# Replace NaNs and function names, and calculate y lists\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m14\u001b[39m x, y, x_edges, df = \u001b[43mcalculate_sequence\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mseq_func_mapping\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     16\u001b[39m \u001b[38;5;66;03m# Define segments \u001b[39;00m\n\u001b[32m     17\u001b[39m x_centers = (x_edges[:-\u001b[32m1\u001b[39m] + x_edges[\u001b[32m1\u001b[39m:]) / \u001b[32m2\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\colin\\Documents\\GitHub\\chip-lab\\ChiPyLab\\general\\exp_sequence.py:93\u001b[39m, in \u001b[36mcalculate_sequence\u001b[39m\u001b[34m(df, seq_func_mapping, num)\u001b[39m\n\u001b[32m     89\u001b[39m y = [segment_y(x, \u001b[38;5;28mlist\u001b[39m(df[pf]), \u001b[38;5;28mlist\u001b[39m(df[pv])) \\\n\u001b[32m     90\u001b[39m       \u001b[38;5;28;01mfor\u001b[39;00m pf, pv \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(f_cols, v_cols)]\n\u001b[32m     92\u001b[39m x = segment_x(x, \u001b[38;5;28mlist\u001b[39m(df[\u001b[33m'\u001b[39m\u001b[33mscale\u001b[39m\u001b[33m'\u001b[39m]))\n\u001b[32m---> \u001b[39m\u001b[32m93\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mxy\u001b[49m, df\n",
+      "\u001b[31mNameError\u001b[39m: name 'xy' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Define parameters\n",
+    "labels = ['rf amplitude', 'magnetic field']\n",
+    "units = ['arb.', 'G']\n",
+    "ylims = [[0, 12], [197, 212]]\n",
+    "colors = [\"purple\", \"green\"]\n",
+    "\n",
+    "# Load df\n",
+    "df = pd.read_excel('q2d_rf_sequence.xlsx')\n",
+    "\n",
+    "# Define function mappings that require parameters\n",
+    "seq_func_mapping['blackman1'] = blackman_seq_func(10)\n",
+    "\n",
+    "# Replace NaNs and function names, and calculate y lists\n",
+    "x, y, x_edges, df = calculate_sequence(df, seq_func_mapping)\n",
+    "\n",
+    "# Define segments \n",
+    "x_centers = (x_edges[:-1] + x_edges[1:]) / 2\n",
+    "\n",
+    "# Parameter list\n",
+    "parameters = list(zip(y, ylims, labels, colors))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0ec3f73e",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'parameters' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m fig, axes = plt.subplots(\u001b[38;5;28mlen\u001b[39m(\u001b[43mparameters\u001b[49m), \u001b[32m1\u001b[39m, sharex=\u001b[38;5;28;01mTrue\u001b[39;00m, figsize=(\u001b[32m8\u001b[39m, \u001b[32m4\u001b[39m),\n\u001b[32m      2\u001b[39m                          gridspec_kw={\u001b[33m'\u001b[39m\u001b[33mhspace\u001b[39m\u001b[33m'\u001b[39m: \u001b[32m0.25\u001b[39m})\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# Plot each parameter\u001b[39;00m\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m ax, (xy, ylims, label, color) \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(axes, parameters):\n",
+      "\u001b[31mNameError\u001b[39m: name 'parameters' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "fig, axes = plt.subplots(len(parameters), 1, sharex=True, figsize=(8, 4),\n",
+    "                         gridspec_kw={'hspace': 0.25})\n",
+    "\n",
+    "# Plot each parameter\n",
+    "for ax, (xy, ylims, label, color) in zip(axes, parameters):\n",
+    "    x, y = xy\n",
+    "    ax.plot(x, y, color=color, lw=2)\n",
+    "    ax.set(xlim=[0, max(x) + 0.5], ylim=ylims, ylabel=label)\n",
+    "    ax.spines['top'].set_visible(False)\n",
+    "    ax.spines['right'].set_visible(False)\n",
+    "\n",
+    "# Vertical dashed lines for segment boundaries\n",
+    "for ax in axes:\n",
+    "    for s in x_edges:\n",
+    "        ax.axvline(s, color='k', linestyle='--', lw=0.8)\n",
+    "\n",
+    "# Add duration and label annotations\n",
+    "for i, (name, duration) in enumerate(zip(df['segments'].values, df['times'].values)):\n",
+    "    axes[0].text(x_centers[i], 1.05, f\"{duration}\", ha='center',\n",
+    "                 va='bottom', transform=axes[0].get_xaxis_transform())\n",
+    "    axes[-1].text(x_centers[i], -0.15, name, ha='center',\n",
+    "                 va='top', transform=axes[-1].get_xaxis_transform(), fontsize=8)\n",
+    "\n",
+    "axes[-1].set_xticklabels([])\n",
+    "# plt.tight_layout()\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef411ccb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig.savefig(\"outputs/exp_sequence_q2d.pdf\")"
    ]
   },
   {
@@ -39,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "943fc986",
    "metadata": {},
    "outputs": [
@@ -206,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
