--- a/examples/plot_exp_sequence.ipynb
+++ b/examples/plot_exp_sequence.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "0d251838",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "id": "01c58277",
    "metadata": {},
    "outputs": [],
@@ -92,6 +92,27 @@
     "# Fill empty label cells with ''\n",
     "df['times'] = df['times'].fillna('')\n",
     "df['segments'] = df['segments'].fillna('')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "4327a875",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['sans-serif']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plt.rcParams['font.family']"
    ]
   },
   {
